# GOMC_Serial

./: .travis.yml  CMakeLists.txt  build.sh
lib/: GeomLib.h
tests/: CMakeLists.txt  main_test.cpp  test_geom.cpp
